@@ -3,6 +3,8 @@
 - New: Replaced HTML editor for recipe and product descriptions (same like on grocy server)
 - Fixed: F-Droid build should work again (#566)
 - Fixed: Crash when amount in recipe ingredient was NaN (thanks @Whhoesj for your fix) (#565)
+- Fixed: Crash on chores overview page with wrong rescheduled date format (#564)
+- Fixed: Rescheduling chore with time tracking enabled did not set chosen time
 
 2.3.0:
 - New: Support for grocy server v3.3.1
